<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pic1"
    android:layout_margin="1dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.indicedemasacorporal.MainActivity" >
    

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:text="@string/peso_text" />
    <EditText
        android:id="@+id/editPeso"
        android:layout_width="170dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="numberDecimal" > 
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:background="#000000"
        android:text="@string/altura_text" />

    <EditText
        android:id="@+id/editAltura"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="#000000"
        android:layout_marginBottom="5dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/buttonCalculoIMC"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:background="#BBBBBB"
        android:onClick="onButtonClickCalcularIMC"
        android:textColor="#FFFFFF"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/calculo_imc_button" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#FFFFFF"
        android:text="@string/oms_text" />

    <TextView
        android:id="@+id/textViewResultado"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button1"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:textColor="#FFFFFF"
    	android:background="#BBBBBB"
        android:onClick="onButonAcercaDe"
        android:text="@string/Info_OMS" />
    

</LinearLayout>